@@ -54,7 +54,7 @@ public class DefaultAccountRegistrationService implements AccountRegistrationSer
             LOGGER.error("Token issuer [{}] does not match CAS' [{}]", claims.getIssuer(), issuer);
             return null;
         }
-        if (claims.getAudience().isEmpty() || !claims.getAudience().get(0).equals(issuer)) {
+        if (claims.getAudience().isEmpty() || !claims.getAudience().getFirst().equals(issuer)) {
             LOGGER.error("Token audience does not match CAS");
             return null;
         }
